--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-lockfile==0.12.2
-schedule==0.4.3
-requests==2.18.4
-GitPython==2.1.7
+lockfile~=0.12.2
+schedule~=0.4.3
+requests~=2.18.4
+GitPython~=2.1.10
