add --fast-list to defaults

--- a/config.json.sample
+++ b/config.json.sample
@@ -46,7 +46,8 @@
                 "--drive-chunk-size": "64M",
                 "--stats": "60s",
                 "--transfers": 8,
-                "--verbose": 1
+                "--verbose": 1,
+                "--fast-list": null
             },
             "rclone_sleeps": {
                 "Failed to copy: googleapi: Error 403: User rate limit exceeded": {
