added readme info for nzbget config section

--- a/config.json.sample
+++ b/config.json.sample
@@ -13,6 +13,10 @@
     },
     "notifications": {
     },
+    "nzbget": {
+        "enabled": false,
+        "url": "https://user:pass@nzbget.domain.com"
+    },
     "plex": {
         "enabled": false,
         "url": "http://localhost:32400",
