Added service_account_path config item for remotes

--- a/config.json.sample
+++ b/config.json.sample
@@ -59,8 +59,14 @@
                     "count": 5,
                     "sleep": 25,
                     "timeout": 3600
+                },
+                "0/s": {
+                    "count": 10,
+                    "sleep": 25,
+                    "timeout": 3600
                 }
             },
+            "service_account_path":"/home/daghaian/.config/cloudplow/service_accounts/,
             "rclone_command":"move",
             "remove_empty_dir_depth": 2,
             "sync_remote": "google:/Media",
