--- a/config.json.sample
+++ b/config.json.sample
@@ -59,6 +59,11 @@
                     "count": 5,
                     "sleep": 25,
                     "timeout": 3600
+                },
+                " 0/s,": {
+                    "count": 15,
+                    "sleep": 25,
+                    "timeout": 140
                 }
             },
             "rclone_command":"move",
