--- a/config.json.sample
+++ b/config.json.sample
@@ -92,7 +92,20 @@
             "size_excludes": [
                 "downloads/*"
             ],
-            "service_account_path":"/home/daghaian/.config/cloudplow/service_accounts/"
+            "service_account_path":"/home/user/.config/cloudplow/service_accounts/",
+            "mover": {
+                "enabled": false,
+                "move_from_remote": "staging:Media",
+                "move_to_remote": "gdrive:Media",
+                "rclone_extras": {
+                    "--delete-empty-src-dirs": null,
+                    "--create-empty-src-dirs": null,
+                    "--stats": "60s",
+                    "--verbose": 1,
+                    "--no-traverse": null,
+                    "--user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.131 Safari/537.36"
+                }
+            }
         }
     }
 }
