--- a/config.json.sample
+++ b/config.json.sample
@@ -103,6 +103,7 @@
                     "--stats": "60s",
                     "--verbose": 1,
                     "--no-traverse": null,
+                    "--drive-server-side-across-configs": null,
                     "--user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.131 Safari/537.36"
                 }
             }
