Added ability to disable throttles on a per-uploader basis.
New uploader config attribute "can_be_throttled" if present and set to
false will disable throttling for that uploader.

--- a/config.json.sample
+++ b/config.json.sample
@@ -78,6 +78,7 @@
     },
     "uploader": {
         "google": {
+            "can_be_throttled": true,
             "check_interval": 30,
             "exclude_open_files": true,
             "max_size_gb": 200,
