Rclone: Added support for new `drive-stop-on-upload-limit` flag
Ref:
- https://github.com/rclone/rclone/issues/3857
- https://github.com/rclone/rclone/commit/58064bdd2b3a001111418656f301d041c3968330

--- a/config.json.sample
+++ b/config.json.sample
@@ -53,6 +53,7 @@
                 "--transfers": 8,
                 "--verbose": 1,
                 "--skip-links": null,
+                "--drive-stop-on-upload-limit": null,
                 "--user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.131 Safari/537.36"
             },
             "rclone_sleeps": {
