--- a/.github/workflows/dockerimage-pullrequest.yml
+++ b/.github/workflows/dockerimage-pullrequest.yml
@@ -1,4 +1,4 @@
-name: Build PR Docker image from PR branch.
+name: Build 'pull_requests' Docker image from PR branch.
 
 on:
   pull_request:
@@ -17,18 +17,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
-
     - name: Build the Docker image
       run: BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
            COMMIT_AUTHOR="`git log -1 --pretty=format:'%an'`"
            VCS_REF=`git rev-parse --short HEAD`
            VCS_URL=`git config --get remote.origin.url`
            docker build .
-           --tag ${GITHUB_REPOSITORY}:${{ steps.extract_branch.outputs.branch }}
+           --tag ${GITHUB_REPOSITORY}:${GITHUB_SHA}
            --build-arg $BUILD_DATE
            --build-arg $COMMIT_AUTHOR
            --build-arg $VCS_REF
@@ -44,21 +39,8 @@ jobs:
         # Container registry server url
         login-server: https://index.docker.io/v1/
 
-    - name: Push Docker image to Docker Hub
-      run: docker push ${GITHUB_REPOSITORY}:${{ steps.extract_branch.outputs.branch }}
-
-    - name: GitHub Packages Login
-      uses: Azure/docker-login@v1
-      with:
-        # Container registry username
-        username: ${{ secrets.GITHUBPACKAGES_USERNAME }}
-        # Container registry password
-        password: ${{ secrets.GITHUB_TOKEN }}
-        # Container registry server url
-        login-server: https://docker.pkg.github.com
-
-    - name: Tag Docker image as 'githubTest' for GitHub Packages
-      run: docker tag ${GITHUB_REPOSITORY}:${{ steps.extract_branch.outputs.branch }} docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ steps.extract_branch.outputs.branch }}:${GITHUB_SHA}
+    - name: Tag Docker image as a version of 'pull_requests' for GitHub Packages
+      run: docker tag ${GITHUB_REPOSITORY}:${GITHUB_SHA} docker.pkg.github.com/${GITHUB_REPOSITORY}/pull_requests:${GITHUB_SHA}
 
     - name: Push Docker image to GitHub Packages
-      run: docker push docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ steps.extract_branch.outputs.branch }}:${GITHUB_SHA}
+      run: docker push docker.pkg.github.com/${GITHUB_REPOSITORY}/pull_requests:${GITHUB_SHA}
