--- a/.github/workflows/dockerimage-pullrequest.yml
+++ b/.github/workflows/dockerimage-pullrequest.yml
@@ -1,4 +1,4 @@
-name: Build PR Docker image from PR branch.
+name: Build 'pull_requests' Docker image from PR branch.
 
 on:
   pull_request:
@@ -17,10 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Extract branch name
+    - name: Extract PR number
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
+      run: PR=pr${GITHUB_REF#refs/pull/} && PR=${PR%/merge} && echo "##[set-output name=prnumber;]$(echo $PR)"
+      id: extract_pr
 
     - name: Build the Docker image
       run: BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
@@ -28,7 +28,7 @@ jobs:
            VCS_REF=`git rev-parse --short HEAD`
            VCS_URL=`git config --get remote.origin.url`
            docker build .
-           --tag ${GITHUB_REPOSITORY}:${{ steps.extract_branch.outputs.branch }}
+           --tag ${GITHUB_REPOSITORY}:${{ steps.extract_pr.outputs.prnumber }}
            --build-arg $BUILD_DATE
            --build-arg $COMMIT_AUTHOR
            --build-arg $VCS_REF
@@ -45,7 +45,7 @@ jobs:
         login-server: https://index.docker.io/v1/
 
     - name: Push Docker image to Docker Hub
-      run: docker push ${GITHUB_REPOSITORY}:${{ steps.extract_branch.outputs.branch }}
+      run: docker push ${GITHUB_REPOSITORY}:${{ steps.extract_pr.outputs.prnumber }}
 
     - name: GitHub Packages Login
       uses: Azure/docker-login@v1
@@ -58,7 +58,7 @@ jobs:
         login-server: https://docker.pkg.github.com
 
     - name: Tag Docker image as 'githubTest' for GitHub Packages
-      run: docker tag ${GITHUB_REPOSITORY}:${{ steps.extract_branch.outputs.branch }} docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ steps.extract_branch.outputs.branch }}:${GITHUB_SHA}
+      run: docker tag ${GITHUB_REPOSITORY}:${{ steps.extract_pr.outputs.prnumber }} docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ steps.extract_pr.outputs.prnumber }}:${GITHUB_SHA}
 
     - name: Push Docker image to GitHub Packages
-      run: docker push docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ steps.extract_branch.outputs.branch }}:${GITHUB_SHA}
+      run: docker push docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ steps.extract_pr.outputs.prnumber }}:${GITHUB_SHA}
